--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-aiofiles==0.6.0
-aiohttp==3.7.4.post0
-async-timeout==3.0.1
-attrs==20.3.0
-caio==0.8.0
-certifi==2020.12.5
-chardet==4.0.0
-et-xmlfile==1.0.1
-idna==2.10
-multidict==5.1.0
-requests==2.25.1
-typing-extensions==3.7.4.3
-urllib3==1.26.4
-yarl==1.6.3
+aiofiles==0.8.0
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==21.4.0
+charset-normalizer==2.0.12
+frozenlist==1.3.0
+idna==3.3
+multidict==6.0.2
+yarl==1.7.2
